--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
 
-  "name": "Traversy Launcher",
-  "description": "Quick launch Traversy Media",
+  "name": "Note.ovh",
+  "description": "Take notes quick.",
   "version": "1.0.0",
-  "icons": { "128": "icon_128.png" },
+  "icons": { "128": "https://swivro.net/discover/wp-content/uploads/2020/08/cropped-cropped-cropped-swivrosingleS-3-3.png" },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "https://swivro.net/discover/wp-content/uploads/2020/08/cropped-cropped-cropped-swivrosingleS-3-3.png",
     "default_popup": "popup.html"
   },
   "permissions": ["activeTab"]
